fixed button jumping up & down

--- a/main.css
+++ b/main.css
@@ -33,6 +33,7 @@ body {
 
 blockquote {
     background: white;
+    height: 250px;
     border-left: 10px solid #ee11d0;
     margin: 20px;
     padding: 10px;
